# icm42670-zephyr-driver

./: CMakeLists.txt  README.rst  prj.conf  sample.yaml
i2c_version/: prj.conf
i2c_version/boards/: nrf52840dk_nrf52840.overlay
i2c_version/src/: icm42670.c
spi_version/boards/: nrf52840dk_nrf52840.overlay
spi_version/src/: icm42670.c  icm42670.h
src/: main.c
